--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -281,6 +281,7 @@ h1, h2, h3, h4, h5, h6, strong, b {
         border-radius: 6px;
         border: 2px solid transparent;
         transition: .2s all ease;
+        height: 38px;
         &:focus {
             min-width: 480px;
             outline: 0 none;
@@ -410,7 +411,8 @@ h1, h2, h3, h4, h5, h6, strong, b {
 }
 
 .content {
-    padding: 0 8px 24px 8px;
+    // padding: 0 8px 24px 8px;
+    padding: 0 0 24px 0;
     max-width: 1200px;
     margin: auto;
 }
