Message row info

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -741,8 +741,8 @@ h1, h2, h3, h4, h5, h6, strong, b {
     width: 14px;
     height: 14px;
     cursor: pointer;
-    padding: 10px;
-    margin: -10px;
+    // padding: 10px;
+    // margin: -10px;
     &--expanded {
         transform: rotate(180deg);
     }
