--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -13,7 +13,8 @@
 }
 
 body {
-    @apply bg-background text-primary;
+    @apply text-primary;
+    background: #091122;
     // background: rgb(var(--color-background));
     // color: rgb(var(--color-primary));
     overflow-y: scroll;
